--- a/app/src/main/res/layout/activity_article_detail.xml
+++ b/app/src/main/res/layout/activity_article_detail.xml
@@ -381,7 +381,17 @@
             app:layout_constraintBottom_toBottomOf="@id/et_comment"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintTop_toTopOf="@id/et_comment" />
-
+        <TextView
+            android:id="@+id/tv_ok_replay"
+            android:layout_width="wrap_content"
+            android:visibility="gone"
+            android:layout_height="wrap_content"
+            android:text="发布"
+            android:textColor="#ff989898"
+            android:textSize="16sp"
+            app:layout_constraintBottom_toBottomOf="@id/et_comment"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintTop_toTopOf="@id/et_comment" />
         <androidx.constraintlayout.widget.Group
             android:id="@+id/g_comment_no"
             android:layout_width="wrap_content"
