--- a/app/src/main/res/layout/activity_release.xml
+++ b/app/src/main/res/layout/activity_release.xml
@@ -85,6 +85,12 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="@id/tv_spnner" />
 
+    <EditText
+        android:id="@+id/tv_title"
+        android:background="@color/qmui_config_color_white"
+        app:layout_constraintTop_toBottomOf="@id/tv_spnner"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"/>
     <ScrollView
         android:id="@+id/sl"
         android:layout_width="match_parent"
@@ -94,7 +100,7 @@
         app:layout_constraintBottom_toTopOf="@id/tv_send_fans"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/tv_spnner">
+        app:layout_constraintTop_toBottomOf="@id/tv_title">
 
         <com.example.szh.tools.RichEditText
             android:id="@+id/richEditText"
