--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -20,6 +20,6 @@
     <color name="color_959595">#ff959595</color>
     <color name="color_111111">#ff111111</color>
     <color name="color_137ed0">#ff137ed0</color>
-
+    <color name="color_e9e9e9">#ffe9e9e9</color>
 
 </resources>
