--- a/app/src/main/res/layout/activity_report.xml
+++ b/app/src/main/res/layout/activity_report.xml
@@ -42,6 +42,7 @@
         android:layout_marginStart="15dp"
         android:layout_marginTop="23dp"
         android:text="谣言"
+        android:checked="true"
         android:textSize="14sp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/tv_title" />
