--- a/app/src/main/res/layout/activity_push_tie.xml
+++ b/app/src/main/res/layout/activity_push_tie.xml
@@ -46,6 +46,15 @@
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@id/et_txt" />
 
+        <ImageView
+            android:id="@+id/iv_img"
+            android:layout_width="48dp"
+            android:layout_height="48dp"
+            android:layout_margin="5dp"
+            app:layout_constraintBottom_toBottomOf="@id/tv_title"
+            app:layout_constraintStart_toStartOf="@id/tv_title"
+            app:layout_constraintTop_toTopOf="@id/tv_title" />
+
         <TextView
             android:id="@+id/tv_title_ag"
             android:layout_width="wrap_content"
