--- a/app/src/main/res/layout/activity_article_detail.xml
+++ b/app/src/main/res/layout/activity_article_detail.xml
@@ -67,6 +67,28 @@
                 app:layout_constraintTop_toBottomOf="@id/tv_detail" />
 
             <ImageView
+                android:id="@+id/iv_like"
+                android:layout_width="12dp"
+                android:layout_height="15dp"
+                android:layout_marginStart="16dp"
+                android:src="@mipmap/ic_like"
+                app:layout_constraintBottom_toBottomOf="@id/tv_look"
+                app:layout_constraintStart_toEndOf="@id/tv_look"
+                app:layout_constraintTop_toTopOf="@id/tv_look" />
+            <TextView
+                android:id="@+id/tv_like_number"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+
+                android:paddingStart="14dp"
+                android:text="人喜欢"
+                android:textColor="#ff989898"
+                android:textSize="13sp"
+                app:layout_constraintBottom_toBottomOf="@id/tv_look"
+                app:layout_constraintStart_toEndOf="@id/iv_like"
+                app:layout_constraintTop_toTopOf="@id/tv_look"
+                 />
+            <ImageView
                 android:id="@+id/iv_close"
                 android:layout_width="21dp"
                 android:layout_height="12dp"
@@ -76,6 +98,7 @@
                 android:paddingTop="3dp"
                 android:paddingEnd="7dp"
                 android:paddingBottom="3dp"
+
                 android:src="@mipmap/ic_close_x"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintTop_toTopOf="@id/tv_look" />
@@ -92,20 +115,12 @@
                 android:text="喜欢"
                 android:textColor="#ff111111"
                 android:textSize="11sp"
+                android:visibility="gone"
                 app:layout_constraintEnd_toStartOf="@id/tv_off"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@id/tv_look"
                 app:qmui_borderColor="#e9e9e9" />
 
-            <ImageView
-                android:layout_width="12dp"
-
-                android:layout_height="15dp"
-                android:layout_marginStart="16dp"
-                android:src="@mipmap/ic_like"
-                app:layout_constraintBottom_toBottomOf="@id/tv_like"
-                app:layout_constraintStart_toStartOf="@id/tv_like"
-                app:layout_constraintTop_toTopOf="@id/tv_like" />
 
             <com.qmuiteam.qmui.widget.roundwidget.QMUIRoundButton
                 android:id="@+id/tv_off"
@@ -119,6 +134,7 @@
                 android:text="取消"
                 android:textColor="#ff111111"
                 android:textSize="11sp"
+                android:visibility="gone"
                 app:layout_constraintEnd_toStartOf="@id/tv_wx"
                 app:layout_constraintStart_toEndOf="@id/tv_like"
                 app:layout_constraintTop_toBottomOf="@id/tv_look"
@@ -129,6 +145,7 @@
                 android:layout_height="15dp"
                 android:layout_marginStart="16dp"
                 android:src="@mipmap/ic_start"
+                android:visibility="gone"
                 app:layout_constraintBottom_toBottomOf="@id/tv_off"
                 app:layout_constraintStart_toStartOf="@id/tv_off"
                 app:layout_constraintTop_toTopOf="@id/tv_off" />
@@ -137,6 +154,7 @@
                 android:id="@+id/tv_wx"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:layout_marginStart="10dp"
                 android:layout_marginTop="19dp"
                 android:paddingStart="35dp"
                 android:paddingTop="11dp"
@@ -145,8 +163,8 @@
                 android:text="微信"
                 android:textColor="#ff111111"
                 android:textSize="11sp"
-                app:layout_constraintEnd_toStartOf="@id/tv_pyq"
-                app:layout_constraintStart_toEndOf="@id/tv_off"
+
+                app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@id/tv_look"
                 app:qmui_borderColor="#e9e9e9" />
 
@@ -163,6 +181,7 @@
                 android:id="@+id/tv_pyq"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:layout_marginStart="20dp"
                 android:layout_marginTop="19dp"
                 android:paddingStart="35dp"
                 android:paddingTop="11dp"
@@ -171,7 +190,6 @@
                 android:text="朋友圈"
                 android:textColor="#ff111111"
                 android:textSize="11sp"
-                app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toEndOf="@id/tv_wx"
                 app:layout_constraintTop_toBottomOf="@id/tv_look"
                 app:qmui_borderColor="#e9e9e9" />
@@ -197,8 +215,8 @@
                 android:text="利好(3)"
                 android:textColor="#ff111111"
                 android:textSize="12sp"
-                app:layout_constraintStart_toStartOf="@id/tv_like"
-                app:layout_constraintTop_toBottomOf="@id/tv_like"
+                app:layout_constraintStart_toStartOf="@id/tv_wx"
+                app:layout_constraintTop_toBottomOf="@id/tv_wx"
                 app:qmui_backgroundColor="#FECD33"
                 app:qmui_borderWidth="0dp"
                 app:qmui_radius="16dp" />
@@ -268,6 +286,7 @@
                 android:text="/"
                 android:textColor="#ff111111"
                 android:textSize="9sp"
+                android:visibility="gone"
                 app:layout_constraintBottom_toBottomOf="@id/tv_hot"
                 app:layout_constraintEnd_toStartOf="@id/tv_send"
                 app:layout_constraintStart_toEndOf="@id/tv_new"
@@ -282,6 +301,7 @@
                 android:text="推+送"
                 android:textColor="@color/color_111111"
                 android:textSize="15sp"
+                android:visibility="gone"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toEndOf="@id/tv_2"
                 app:layout_constraintTop_toBottomOf="@id/rb_good" />
@@ -311,10 +331,9 @@
             android:layout_width="23dp"
             android:layout_height="23dp"
             android:src="@mipmap/ic_send"
-            app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintBottom_toBottomOf="@id/et_comment"
             app:layout_constraintEnd_toEndOf="parent"
-             />
+            app:layout_constraintTop_toTopOf="parent" />
 
         <ImageView
             android:id="@+id/iv_message"
@@ -322,10 +341,9 @@
             android:layout_height="23dp"
             android:layout_marginEnd="25dp"
             android:src="@mipmap/ic_home_talk_off"
-            app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintBottom_toBottomOf="@id/et_comment"
             app:layout_constraintEnd_toStartOf="@id/iv_send"
-             />
+            app:layout_constraintTop_toTopOf="parent" />
 
         <EditText
             android:id="@+id/et_comment"
@@ -381,17 +399,19 @@
             app:layout_constraintBottom_toBottomOf="@id/et_comment"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintTop_toTopOf="@id/et_comment" />
+
         <TextView
             android:id="@+id/tv_ok_replay"
             android:layout_width="wrap_content"
-            android:visibility="gone"
             android:layout_height="wrap_content"
             android:text="发布"
             android:textColor="#ff989898"
             android:textSize="16sp"
+            android:visibility="gone"
             app:layout_constraintBottom_toBottomOf="@id/et_comment"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintTop_toTopOf="@id/et_comment" />
+
         <androidx.constraintlayout.widget.Group
             android:id="@+id/g_comment_no"
             android:layout_width="wrap_content"
