--- a/app/src/main/res/layout/activity_add_rmb.xml
+++ b/app/src/main/res/layout/activity_add_rmb.xml
@@ -31,7 +31,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:paddingStart="28dp"
-        android:text="0金币"
+        android:text="5金币"
         android:textColor="#ffeb090d"
         android:textSize="15sp"
         app:layout_constraintBottom_toBottomOf="@id/surplus"
@@ -75,6 +75,7 @@
         android:layout_marginStart="19dp"
         android:layout_marginEnd="19dp"
         android:paddingTop="14dp"
+        android:layout_marginTop="10dp"
         android:paddingBottom="14dp"
         android:text="立即充值"
         android:textColor="#ffffffff"
