--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -80,7 +80,7 @@
         android:layout_marginTop="23dp"
         android:layout_marginEnd="28.5dp"
         android:background="@drawable/conner5_solid_gray"
-        android:hint="请输入手密码"
+        android:hint="请输入验证码"
         android:paddingStart="12dp"
         android:paddingTop="15dp"
         android:paddingBottom="15dp"
@@ -93,7 +93,6 @@
         android:layout_height="wrap_content"
         android:paddingEnd="15dp"
         android:text="获取验证码"
-        android:visibility="gone"
         android:textColor="#FF2BA4D9"
         android:textSize="15sp"
         app:layout_constraintBottom_toBottomOf="@id/et_psd"
@@ -174,7 +173,7 @@
         android:layout_width="27dp"
         android:layout_height="27dp"
         android:layout_marginTop="28dp"
-        android:src="@mipmap/ic_phone"
+        android:src="@mipmap/ic_password"
         app:layout_constraintEnd_toStartOf="@id/title"
         app:layout_constraintTop_toBottomOf="@id/title" />
 
@@ -183,7 +182,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="9dp"
-        android:text="手机号登陆"
+        android:text="密码登录"
         android:textColor="#ff989898"
         android:textSize="10sp"
         app:layout_constraintEnd_toEndOf="@id/iv_phone"
