--- a/app/src/main/res/layout/fragment_list.xml
+++ b/app/src/main/res/layout/fragment_list.xml
@@ -12,37 +12,38 @@
     tools:ignore="MissingConstraints">
 
     <TextView
-        android:id="@+id/tv_zixun"
+        android:id="@+id/tv_one"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:padding="10dp"
         android:paddingEnd="12dp"
-        android:text="资讯"
+        android:text="一级目录"
         android:textColor="#ff020202"
-        android:textSize="17sp"
-        app:layout_constraintEnd_toStartOf="@id/tv_caijing"
+        android:textSize="20sp"
+
         app:layout_constraintHorizontal_chainStyle="packed"
         app:layout_constraintStart_toStartOf="parent" />
 
     <TextView
-        android:id="@+id/tv_caijing"
+        android:id="@+id/tv_two"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:padding="10dp"
         android:paddingStart="12dp"
-        android:text="财经"
-        android:textColor="#ff959595"
-        android:textSize="17sp"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toEndOf="@id/tv_zixun" />
+        android:text="二级目录"
+        android:textColor="#ff020202"
+        android:textSize="20sp"
+        app:layout_constraintTop_toBottomOf="@id/recycler_g" />
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/recycler_g"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="23dp"
-        app:layout_constraintTop_toBottomOf="@id/tv_zixun" />
+        app:layout_constraintTop_toBottomOf="@id/tv_one" />
+
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/recycler_v"
-        app:layout_constraintTop_toBottomOf="@id/recycler_g"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"/>
+        android:layout_height="wrap_content"
+        app:layout_constraintTop_toBottomOf="@id/tv_two" />
 </androidx.constraintlayout.widget.ConstraintLayout>
