--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -45,7 +45,7 @@
         android:paddingTop="14dp"
         android:paddingEnd="11dp"
         android:paddingBottom="16dp"
-        android:text="关注"
+        android:text="已发布"
         android:textColor="#ff959595"
         android:textSize="18sp"
         app:layout_constraintEnd_toEndOf="parent"
