--- a/app/src/main/res/layout/fragment_recommend.xml
+++ b/app/src/main/res/layout/fragment_recommend.xml
@@ -1,9 +1,138 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.recyclerview.widget.RecyclerView xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:id="@+id/recycler"
-    android:layout_height="match_parent"
-    android:orientation="vertical">
+    android:layout_height="match_parent">
 
-</androidx.recyclerview.widget.RecyclerView>
+    <TextView
+        android:id="@+id/tv_one"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_margin="5dp"
+        android:background="@color/color_ffcccc"
+        android:gravity="center_horizontal"
+        android:paddingTop="10dp"
+        android:paddingBottom="60dp"
+        android:text="上证指数"
+        app:layout_constraintEnd_toStartOf="@id/tv_two"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        tools:ignore="MissingConstraints" />
+
+    <TextView
+        android:id="@+id/tv_one_bottom"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:paddingBottom="10dp"
+        android:text="+3213 +12313 "
+        android:textColor="@color/qmui_config_color_red"
+        app:layout_constraintBottom_toBottomOf="@id/tv_one"
+        app:layout_constraintEnd_toEndOf="@id/tv_one"
+        app:layout_constraintStart_toStartOf="@id/tv_one"
+        tools:ignore="MissingConstraints" />
+
+    <TextView
+        android:id="@+id/tv_one_center"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:paddingBottom="5dp"
+        android:text="3333.5555.666"
+        android:textColor="@color/qmui_config_color_red"
+        android:textSize="16sp"
+        android:textStyle="bold"
+        app:layout_constraintBottom_toTopOf="@id/tv_one_bottom"
+        app:layout_constraintEnd_toEndOf="@id/tv_one"
+        app:layout_constraintStart_toStartOf="@id/tv_one"
+        tools:ignore="MissingConstraints" />
+
+    <TextView
+        android:id="@+id/tv_two"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_margin="5dp"
+        android:background="@color/color_ffcccc"
+        android:gravity="center_horizontal"
+        android:paddingTop="10dp"
+        android:paddingBottom="60dp"
+        android:text="上证指数"
+        app:layout_constraintEnd_toStartOf="@id/tv_three"
+        app:layout_constraintStart_toEndOf="@id/tv_one"
+        app:layout_constraintTop_toTopOf="parent"
+        tools:ignore="MissingConstraints" />
+
+    <TextView
+        android:id="@+id/tv_two_bottom"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:paddingBottom="10dp"
+        android:text="+3213 +12313 "
+        android:textColor="@color/qmui_config_color_red"
+        app:layout_constraintBottom_toBottomOf="@id/tv_two"
+        app:layout_constraintEnd_toEndOf="@id/tv_two"
+        app:layout_constraintStart_toStartOf="@id/tv_two"
+        tools:ignore="MissingConstraints" />
+
+    <TextView
+        android:id="@+id/tv_two_center"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:paddingBottom="5dp"
+        android:text="3333.5555.666"
+        android:textColor="@color/qmui_config_color_red"
+        android:textSize="16sp"
+        android:textStyle="bold"
+        app:layout_constraintBottom_toTopOf="@id/tv_two_bottom"
+        app:layout_constraintEnd_toEndOf="@id/tv_two"
+        app:layout_constraintStart_toStartOf="@id/tv_two"
+        tools:ignore="MissingConstraints" />
+
+    <TextView
+        android:id="@+id/tv_three"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_margin="5dp"
+        android:background="@color/color_ffcccc"
+        android:gravity="center_horizontal"
+        android:paddingTop="10dp"
+        android:paddingBottom="60dp"
+        android:text="上证指数"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toEndOf="@id/tv_two"
+        app:layout_constraintTop_toTopOf="parent"
+        tools:ignore="MissingConstraints" />
+
+    <TextView
+        android:id="@+id/tv_three_bottom"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:paddingBottom="10dp"
+        android:text="+3213 +12313 "
+        android:textColor="@color/qmui_config_color_red"
+        app:layout_constraintBottom_toBottomOf="@id/tv_three"
+        app:layout_constraintEnd_toEndOf="@id/tv_three"
+        app:layout_constraintStart_toStartOf="@id/tv_three"
+        tools:ignore="MissingConstraints" />
+
+    <TextView
+        android:id="@+id/tv_three_center"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:paddingBottom="5dp"
+        android:text="3333.5555.666"
+        android:textColor="@color/qmui_config_color_red"
+        android:textSize="16sp"
+        android:textStyle="bold"
+        app:layout_constraintBottom_toTopOf="@id/tv_three_bottom"
+        app:layout_constraintEnd_toEndOf="@id/tv_three"
+        app:layout_constraintStart_toStartOf="@id/tv_three"
+        tools:ignore="MissingConstraints" />
+
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/recycler"
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        app:layout_constraintTop_toBottomOf="@id/tv_one"
+        android:orientation="vertical"
+        app:layout_constraintBottom_toBottomOf="parent"/>
+</androidx.constraintlayout.widget.ConstraintLayout>
