--- a/app/src/main/res/layout/item_recommend_video.xml
+++ b/app/src/main/res/layout/item_recommend_video.xml
@@ -4,136 +4,73 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:paddingStart="15dp"
-    android:paddingTop="20dp"
-    android:paddingEnd="16dp"
+    android:background="@color/qmui_config_color_white"
+    android:paddingStart="16dp"
+    android:paddingTop="22dp"
     tools:ignore="MissingConstraints">
 
     <ImageView
         android:id="@+id/iv_head"
-        android:layout_width="40dp"
-        android:layout_height="40dp" />
-
-    <TextView
-        android:id="@+id/tv_name"
+        app:layout_constraintTop_toTopOf="@id/tv_name"
+        app:layout_constraintBottom_toBottomOf="@id/tv_name"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="11dp"
-        android:text="韩江雪"
-        android:textColor="#ff137ed0"
-        android:textSize="15sp"
+        android:layout_height="0dp"/>
+    <TextView
         app:layout_constraintStart_toEndOf="@id/iv_head"
-        app:layout_constraintTop_toTopOf="@id/iv_head" />
-
+        android:id="@+id/tv_name"
+        android:text="13sp"
+        android:textSize="13sp"
+        android:textColor="@color/color_137ED0"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"/>
     <TextView
         android:id="@+id/tv_time"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="05-14 16:22"
-        android:textColor="#ff989898"
         android:textSize="13sp"
-        app:layout_constraintBottom_toBottomOf="@id/iv_head"
-        app:layout_constraintStart_toStartOf="@id/tv_name" />
-
-    <com.qmuiteam.qmui.widget.roundwidget.QMUIRoundButton
-        android:id="@+id/tv_repaly"
+        app:layout_constraintTop_toBottomOf="@id/tv_name"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:paddingStart="13dp"
-        android:paddingTop="7dp"
-        android:paddingEnd="13dp"
-        android:visibility="gone"
-        android:paddingBottom="7dp"
-        android:text="回复"
-        android:textColor="#FF5B5B5B"
-        app:layout_constraintEnd_toStartOf="@id/iv_zan"
-        app:qmui_backgroundColor="#FFFAFAFA"
-        app:qmui_borderWidth="0dp"
-        app:qmui_radius="13dp" />
-
+        android:layout_height="wrap_content"/>
     <TextView
-        android:id="@+id/tv_zan"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="赞"
-        android:textColor="#ff010101"
-        android:textSize="15sp"
-        app:layout_constraintBottom_toBottomOf="@id/tv_repaly"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toTopOf="@id/tv_repaly" />
-
-    <ImageView
-        android:id="@+id/iv_zan"
-        android:layout_width="13dp"
-        android:layout_height="14dp"
-        android:layout_marginEnd="10dp"
-        android:src="@mipmap/ic_good"
-        app:layout_constraintBottom_toBottomOf="@id/tv_repaly"
-        app:layout_constraintEnd_toStartOf="@id/tv_zan"
-        app:layout_constraintTop_toTopOf="@id/tv_repaly" />
-
-    <TextView
+        app:layout_constraintTop_toBottomOf="@id/tv_time"
         android:id="@+id/tv_title"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_marginTop="12dp"
-        android:text="啥？"
+        android:paddingEnd="31dp"
+        android:paddingBottom="16dp"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toStartOf="@id/iv_photo"
+        android:text=""
         android:textColor="#ff020202"
-        android:textSize="17sp"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="@id/tv_name"
-        app:layout_constraintTop_toBottomOf="@id/iv_head" />
-
-    <com.qmuiteam.qmui.widget.roundwidget.QMUIRoundButton
-        android:id="@+id/tv_article"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="17.5dp"
-        android:gravity="center"
-        android:paddingTop="25dp"
-        android:paddingBottom="25dp"
-        android:text="5月21日新闻泡茶Fan"
-        android:textColor="#ff020202"
-        android:textSize="14sp"
-        app:layout_constraintEnd_toEndOf="@id/tv_title"
-        app:layout_constraintStart_toStartOf="@id/tv_title"
-        app:layout_constraintTop_toBottomOf="@id/tv_title"
-        app:qmui_backgroundColor="#FFFAFAFA"
-        app:qmui_borderWidth="0dp"
-        app:qmui_radius="5dp" />
-
+        android:textSize="17sp" />
     <ImageView
-        android:id="@+id/iv_detail"
-        android:layout_width="52dp"
-        android:layout_height="52dp"
-        android:layout_marginStart="5.5dp"
-        app:layout_constraintBottom_toBottomOf="@id/tv_article"
-        app:layout_constraintStart_toStartOf="@id/tv_article"
-        app:layout_constraintTop_toTopOf="@id/tv_article" />
+        android:id="@+id/iv_photo"
+        app:layout_constraintEnd_toEndOf="parent"
+        android:layout_marginEnd="10dp"
+        app:layout_constraintTop_toTopOf="@id/tv_title"
+
+        android:layout_width="70dp"
+        android:layout_height="wrap_content"/>
+    <TextView
+        app:layout_constraintTop_toBottomOf="@id/iv_photo"
+        android:id="@+id/tv_look"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"/>
 
     <com.qmuiteam.qmui.widget.roundwidget.QMUIRoundButton
+        app:layout_constraintTop_toBottomOf="@id/tv_look"
         android:id="@+id/rb_detail"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:paddingStart="35dp"
+
         android:paddingTop="8.5dp"
         android:paddingEnd="22dp"
         android:paddingBottom="9dp"
         android:textColor="#ff5b5b5b"
         android:textSize="12sp"
-        app:layout_constraintTop_toBottomOf="@id/tv_article"
         app:qmui_backgroundColor="#FFFAFAFA"
         app:qmui_borderWidth="0dp"
         app:qmui_radius="3dp" />
 
-    <ImageView
-        android:id="@+id/iv_zu"
-        android:layout_width="15dp"
-        android:layout_height="15dp"
-        android:src="@mipmap/ic_zu"
-        app:layout_constraintBottom_toBottomOf="@id/rb_detail"
-        app:layout_constraintStart_toStartOf="@id/rb_detail"
-        app:layout_constraintTop_toTopOf="@id/rb_detail" />
+
 
     <ImageView
         android:id="@+id/iv_go"
