--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -6,7 +6,7 @@
     <color name="black">#000000</color>
     <color name="color_2BA4D9">#2BA4D9</color>
     <color name="color_CECECE">#CECECE</color>
-    <color name ="color_white">#ffffff</color>
+    <color name="color_white">#ffffff</color>
     <color name="color_2CA4D9">#FF2CA4D9</color>
     <color name="color_444444">#ff444444</color>
     <color name="color_DFDFDF">#FFDFDFDF</color>
@@ -22,4 +22,5 @@
     <color name="color_137ed0">#ff137ed0</color>
     <color name="color_e9e9e9">#ffe9e9e9</color>
     <color name="color_fafafa">#ffFAFAFA</color>
+    <color name="color_ffcccc">#ffcccc</color>
 </resources>
