--- a/app/src/main/res/layout/activity_article_detail.xml
+++ b/app/src/main/res/layout/activity_article_detail.xml
@@ -10,7 +10,7 @@
         android:id="@+id/sl"
         android:layout_width="match_parent"
         android:layout_height="0dp"
-        app:layout_constraintBottom_toTopOf="@id/cl_pinglun"
+        app:layout_constraintBottom_toTopOf="@id/line"
         app:layout_constraintTop_toTopOf="parent">
 
         <androidx.constraintlayout.widget.ConstraintLayout
@@ -34,27 +34,22 @@
                 android:textSize="19sp"
                 app:layout_constraintTop_toBottomOf="@id/titleBar" />
 
-            <ImageView
-                android:id="@+id/iv_img"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginStart="14dp"
-                android:layout_marginTop="24.5dp"
-                android:layout_marginEnd="14dp"
-                app:layout_constraintTop_toBottomOf="@id/tv_title" />
-
             <TextView
                 android:id="@+id/tv_detail"
-                android:layout_width="match_parent"
+                android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="19dp"
-                android:paddingStart="14dp"
-                android:paddingEnd="14dp"
-                android:textColor="#ff020202"
-                android:textSize="16sp"
+                android:layout_marginTop="8dp"
+                android:background="@color/color_DFDFDF"
+                android:paddingStart="8dp"
+                android:paddingTop="5dp"
+                android:paddingEnd="8dp"
+                android:paddingBottom="5dp"
+                android:text="查看原文"
+                android:textColor="@color/color_2BA4D9"
+                android:textSize="12sp"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@id/iv_img" />
+                app:layout_constraintTop_toBottomOf="@id/tv_title" />
 
             <TextView
                 android:id="@+id/tv_look"
@@ -66,29 +61,6 @@
                 android:textColor="#ff989898"
                 android:textSize="13sp"
                 app:layout_constraintTop_toBottomOf="@id/tv_detail" />
-
-            <ImageView
-                android:id="@+id/iv_like"
-                android:layout_width="12dp"
-                android:layout_height="15dp"
-                android:layout_marginStart="16dp"
-                android:src="@mipmap/ic_like"
-                app:layout_constraintBottom_toBottomOf="@id/tv_look"
-                app:layout_constraintStart_toEndOf="@id/tv_look"
-                app:layout_constraintTop_toTopOf="@id/tv_look" />
-
-            <TextView
-                android:id="@+id/tv_like_number"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-
-                android:paddingStart="14dp"
-                android:text="人喜欢"
-                android:textColor="#ff989898"
-                android:textSize="13sp"
-                app:layout_constraintBottom_toBottomOf="@id/tv_look"
-                app:layout_constraintStart_toEndOf="@id/iv_like"
-                app:layout_constraintTop_toTopOf="@id/tv_look" />
 
             <ImageView
                 android:id="@+id/iv_close"
@@ -316,6 +288,7 @@
                 android:text="最热"
                 android:textColor="#ff137ed0"
                 android:textSize="15sp"
+                android:visibility="invisible"
                 app:layout_constraintEnd_toStartOf="@id/tv_1"
                 app:layout_constraintHorizontal_chainStyle="packed"
                 app:layout_constraintStart_toStartOf="parent"
@@ -329,6 +302,7 @@
                 android:text="/"
                 android:textColor="#ff111111"
                 android:textSize="9sp"
+                android:visibility="invisible"
                 app:layout_constraintBottom_toBottomOf="@id/tv_hot"
                 app:layout_constraintEnd_toStartOf="@id/tv_new"
                 app:layout_constraintStart_toEndOf="@id/tv_hot"
@@ -343,6 +317,7 @@
                 android:text="最新"
                 android:textColor="@color/color_111111"
                 android:textSize="15sp"
+                android:visibility="invisible"
                 app:layout_constraintEnd_toStartOf="@id/tv_2"
                 app:layout_constraintStart_toEndOf="@id/tv_1"
                 app:layout_constraintTop_toBottomOf="@id/rb_1" />
@@ -360,7 +335,23 @@
                 app:layout_constraintEnd_toStartOf="@id/tv_send"
                 app:layout_constraintStart_toEndOf="@id/tv_new"
                 app:layout_constraintTop_toTopOf="@id/tv_hot" />
-
+            <TextView
+                android:id="@+id/tv_novip"
+                android:text="以下内容仅VIP课件"
+                android:gravity="center"
+                app:layout_constraintTop_toBottomOf="@id/rb_1"
+                android:layout_marginTop="20dp"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"/>
+            <TextView
+                android:id="@+id/tv_buy_vip"
+                android:text="购买VIP"
+                android:gravity="center"
+                android:layout_marginTop="20dp"
+                app:layout_constraintTop_toBottomOf="@id/tv_novip"
+                android:textColor="@color/color_2BA4D9"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"/>
             <TextView
                 android:id="@+id/tv_send"
                 android:layout_width="wrap_content"
@@ -384,118 +375,31 @@
         </androidx.constraintlayout.widget.ConstraintLayout>
     </ScrollView>
 
-    <androidx.constraintlayout.widget.ConstraintLayout
-        android:id="@+id/cl_pinglun"
+    <View
+        android:id="@+id/line"
         android:layout_width="match_parent"
+        android:layout_height="0.5dp"
+        android:layout_marginBottom="10dp"
+        android:background="@color/color_DFDFDF"
+        app:layout_constraintBottom_toTopOf="@id/tv_tui" />
+
+    <ImageView
+        android:id="@+id/iv_send"
+        android:layout_width="23dp"
+        android:layout_height="23dp"
+        android:layout_margin="10dp"
+        android:src="@mipmap/ic_send"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintStart_toEndOf="@id/tv_tui" />
+
+    <TextView
+        android:id="@+id/tv_tui"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:background="@color/qmui_config_color_white"
-        android:paddingStart="15dp"
-        android:paddingTop="7dp"
-        android:paddingEnd="28dp"
-        android:paddingBottom="7dp"
-        app:layout_constraintBottom_toBottomOf="parent">
+        android:paddingStart="40dp"
+        android:text="推上热搜"
+        android:textSize="16sp"
+        app:layout_constraintBottom_toBottomOf="@id/iv_send"
+        app:layout_constraintTop_toTopOf="@id/iv_send" />
 
-        <ImageView
-            android:id="@+id/iv_send"
-            android:layout_width="23dp"
-            android:layout_height="23dp"
-            android:src="@mipmap/ic_send"
-            app:layout_constraintBottom_toBottomOf="@id/et_comment"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintTop_toTopOf="parent" />
-
-        <ImageView
-            android:id="@+id/iv_message"
-            android:layout_width="23dp"
-            android:layout_height="23dp"
-            android:layout_marginEnd="25dp"
-            android:src="@mipmap/ic_home_talk_off"
-            app:layout_constraintBottom_toBottomOf="@id/et_comment"
-            app:layout_constraintEnd_toStartOf="@id/iv_send"
-            app:layout_constraintTop_toTopOf="parent" />
-
-        <EditText
-            android:id="@+id/et_comment"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:layout_marginEnd="23dp"
-            android:background="@drawable/conner5_solid_gray"
-            android:paddingStart="5dp"
-            android:paddingTop="11dp"
-            android:paddingEnd="5dp"
-            android:paddingBottom="7dp"
-            android:textColor="#FF2F2F2F"
-            app:layout_constraintEnd_toStartOf="@id/iv_message"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent" />
-
-        <ImageView
-            android:id="@+id/iv_add_photo"
-            android:layout_width="50dp"
-            android:layout_height="50dp"
-            android:layout_marginTop="10dp"
-            android:src="@mipmap/ic_add_img"
-            app:layout_constraintTop_toBottomOf="@id/et_comment" />
-
-        <ImageView
-            android:id="@+id/iv_check"
-            android:layout_width="16dp"
-            android:layout_height="16dp"
-            android:layout_marginEnd="10dp"
-            android:src="@mipmap/ic_check_off"
-            app:layout_constraintBottom_toBottomOf="@id/tv_only"
-            app:layout_constraintEnd_toStartOf="@id/tv_only"
-            app:layout_constraintTop_toTopOf="@id/tv_only" />
-
-        <TextView
-            android:id="@+id/tv_only"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="仅帖子作者可见"
-            android:textColor="#ff5b5b5b"
-            android:textSize="13sp"
-            app:layout_constraintBottom_toBottomOf="@id/iv_add_photo"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintTop_toTopOf="@id/iv_add_photo" />
-
-        <TextView
-            android:id="@+id/tv_ok"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="发布"
-            android:textColor="#ff989898"
-            android:textSize="16sp"
-            app:layout_constraintBottom_toBottomOf="@id/et_comment"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintTop_toTopOf="@id/et_comment" />
-
-        <TextView
-            android:id="@+id/tv_ok_replay"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="发布"
-            android:textColor="#ff989898"
-            android:textSize="16sp"
-            android:visibility="gone"
-            app:layout_constraintBottom_toBottomOf="@id/et_comment"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintTop_toTopOf="@id/et_comment" />
-
-        <androidx.constraintlayout.widget.Group
-            android:id="@+id/g_comment_no"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            app:constraint_referenced_ids="iv_send,iv_message"
-            tools:layout_editor_absoluteX="15dp"
-            tools:layout_editor_absoluteY="6dp" />
-
-        <androidx.constraintlayout.widget.Group
-            android:id="@+id/g_comment"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:visibility="gone"
-            app:constraint_referenced_ids="tv_only,iv_check,iv_add_photo,tv_ok"
-            tools:layout_editor_absoluteX="15dp"
-            tools:layout_editor_absoluteY="7dp" />
-    </androidx.constraintlayout.widget.ConstraintLayout>
 </androidx.constraintlayout.widget.ConstraintLayout>
