--- a/app/src/main/res/layout/item_recommend_video.xml
+++ b/app/src/main/res/layout/item_recommend_video.xml
@@ -11,65 +11,70 @@
 
     <ImageView
         android:id="@+id/iv_head"
-        app:layout_constraintTop_toTopOf="@id/tv_name"
+        android:layout_width="wrap_content"
+        android:layout_height="0dp"
         app:layout_constraintBottom_toBottomOf="@id/tv_name"
-        android:layout_width="wrap_content"
-        android:layout_height="0dp"/>
+        app:layout_constraintTop_toTopOf="@id/tv_name" />
+
     <TextView
-        app:layout_constraintStart_toEndOf="@id/iv_head"
         android:id="@+id/tv_name"
-        android:text="13sp"
-        android:textSize="13sp"
-        android:textColor="@color/color_137ED0"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"/>
+        android:layout_height="wrap_content"
+        android:text="13sp"
+        android:textColor="@color/color_137ED0"
+        android:textSize="13sp"
+        app:layout_constraintStart_toEndOf="@id/iv_head" />
+
     <TextView
         android:id="@+id/tv_time"
-        android:textSize="13sp"
-        app:layout_constraintTop_toBottomOf="@id/tv_name"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"/>
+        android:layout_height="wrap_content"
+        android:textSize="10sp"
+        app:layout_constraintTop_toBottomOf="@id/tv_name" />
+
     <TextView
-        app:layout_constraintTop_toBottomOf="@id/tv_time"
         android:id="@+id/tv_title"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:paddingEnd="31dp"
         android:paddingBottom="16dp"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toStartOf="@id/iv_photo"
         android:text=""
         android:textColor="#ff020202"
-        android:textSize="17sp" />
+        android:textSize="16sp"
+        app:layout_constraintEnd_toStartOf="@id/iv_photo"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/tv_time" />
+
     <ImageView
         android:id="@+id/iv_photo"
-        app:layout_constraintEnd_toEndOf="parent"
+        android:layout_width="100dp"
+        android:layout_height="70dp"
         android:layout_marginEnd="10dp"
-        app:layout_constraintTop_toTopOf="@id/tv_title"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toTopOf="@id/tv_title" />
 
-        android:layout_width="70dp"
-        android:layout_height="wrap_content"/>
     <TextView
-        app:layout_constraintTop_toBottomOf="@id/iv_photo"
         android:id="@+id/tv_look"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"/>
+        android:layout_height="wrap_content"
+        android:textSize="10sp"
+        app:layout_constraintTop_toBottomOf="@id/iv_photo" />
 
     <com.qmuiteam.qmui.widget.roundwidget.QMUIRoundButton
-        app:layout_constraintTop_toBottomOf="@id/tv_look"
         android:id="@+id/rb_detail"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-
+        android:paddingStart="0dp"
         android:paddingTop="8.5dp"
         android:paddingEnd="22dp"
         android:paddingBottom="9dp"
+        android:text="12312312"
         android:textColor="#ff5b5b5b"
         android:textSize="12sp"
+        app:layout_constraintTop_toBottomOf="@id/tv_look"
         app:qmui_backgroundColor="#FFFAFAFA"
         app:qmui_borderWidth="0dp"
         app:qmui_radius="3dp" />
-
 
 
     <ImageView
